# Lancelot

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-format.yaml  main.cpp
include/: Contract.hpp  ContractFetcher.hpp  ContractInfo.hpp  Lancelot.hpp  LancelotAPI.hpp  StoreProcedures.hpp
include/Lancelot/: ContractInfo.hpp  Enums.hpp  LancelotAPI.hpp  StoreProcedures.hpp  Structure.hpp
include/Lancelot/API/: API.hpp
include/Lancelot/API/Adaptor/: Adaptor.hpp
include/Lancelot/API/Common/: Common.hpp  StockPacket.hpp
include/Lancelot/API/Strategy/: Strategy.hpp
include/Lancelot/ContractInfo/: ContractFetcher.hpp  ContractInfo.hpp  StoreProcedures.hpp
include/Lancelot/Database/: DatabaseHandler.hpp
include/Lancelot/Logger/: Logger.hpp
include/Lancelot/Security/: Security.hpp
src/: Common.cpp  Contract.cpp  ContractFetcher.cpp  ContractInfo.cpp  DatabaseHandler.cpp  Enums.cpp  Security.cpp  StockPacket.cpp
